Revision history for LWP-Protocol-AnyEvent-http

1.0.4   2012-mm-dd
        - Preserve AnyEvent::HTTP pseudo heads by prefixing with X-AE-
        - Fix duplicate headers in response

1.0.3   2011-06-17
        - Skip tests that will fail due to DNS hijacking.

1.0.2   2011-06-13
        Initial version
        - LWP-Protocol-Coro-http-v1.0.1 minus the dependency on Coro.
        - Tests added.
        - Fixed bugs in :content_cb features.
        - Fixed bugs in error handling.