@@ -77,6 +77,13 @@ SERVERLOOP: {
                return $buf if $count-- > 0;
                return undef; # done
             });
+        } elsif ($location =~ m!^/referer$!) {
+           if (my $referer = $r->headers->{referer}) {
+              $res = HTTP::Response->new(302);
+              $res->header('location', $referer);
+           } else {
+              $res = HTTP::Response->new(204);
+           }
         } elsif ($location =~ m!^/error/after_headers$!) {
             my $count = 2;
             $res = HTTP::Response->new(200, "OK", undef, sub {
